refact using parameterized test